inflect2 frontend: lexicon comes from the bundle, not the developer's disk
tryCreate searched "lexicon.bin", "../Inflect-Nano-v2/lexicon.bin" and ~/.inflect - a
machine layout leaking into library behaviour - and printed its choice to stderr. It now
reads the bundled classpath resource, with -Dinflect.lexicon to override.

Format errors were silent (`break`, `Map.of()`), so a corrupt lexicon degraded to spelling
every word out letter by letter. Bad magic, an unsupported version and out-of-order
entries now throw, and an unusable lexicon says so once on stderr rather than quietly
producing gibberish. A missing one stays silent - that is the caller's fallback path.

It also stopped normalizing the text a second time: InflectTTS already did, and the SPI
documents that the caller does.