@@ -1,121 +1,147 @@
-// Pure-Java phonemizer — IVL2 lexicon.bin trie with morphology fallback.
-// Normalizes text, then does word-by-word lookup in the trie.
+// Pure-Java phonemizer: an IVL2 lexicon of pre-phonemized words, plus a suffix fallback.
+// The lexicon ships as a classpath resource; -Dinflect.lexicon=<path> overrides it.
 package com.qxotic.jinfer.models.inflect2.frontend;
 
 import com.qxotic.jinfer.models.inflect2.Symbols;
 import java.io.IOException;
+import java.nio.ByteBuffer;
+import java.nio.ByteOrder;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.util.*;
+import java.util.Arrays;
+import java.util.HashMap;
+import java.util.Map;
 
 final class LexiconPhonemizer implements Phonemizer {
-    private static final int SPACE = 16;
 
-    private final Map<String, int[]> dict;
+    private static final String RESOURCE = "/lexicon.bin";
+    private static final String OVERRIDE_PROPERTY = "inflect.lexicon";
 
-    private LexiconPhonemizer(Map<String, int[]> dict) {
-        this.dict = dict;
+    /** Word separator in the symbol table — the model hears a space as a symbol of its own. */
+    private static final int SPACE = Symbols.idOf(' ');
+
+    private final Map<String, int[]> lexicon;
+
+    private LexiconPhonemizer(Map<String, int[]> lexicon) {
+        this.lexicon = lexicon;
     }
 
+    /**
+     * The bundled lexicon, or the {@code -Dinflect.lexicon} override, or null when there is none. A
+     * lexicon that is present but unreadable says so — silently spelling every word out letter by
+     * letter is worse than one line on stderr.
+     */
     static LexiconPhonemizer tryCreate() {
-        for (String p :
-                new String[] {
-                    "lexicon.bin",
-                    "../Inflect-Nano-v2/lexicon.bin",
-                    System.getProperty("user.home") + "/.inflect/lexicon.bin"
-                }) {
-            try {
-                var path = Path.of(p);
-                if (Files.exists(path) && Files.size(path) > 1000) {
-                    System.err.println("[LexiconPhonemizer] " + path);
-                    return new LexiconPhonemizer(readTrie(Files.readAllBytes(path)));
-                }
-            } catch (IOException ignored) {
+        String override = System.getProperty(OVERRIDE_PROPERTY);
+        try {
+            if (override != null)
+                return new LexiconPhonemizer(readTrie(Files.readAllBytes(Path.of(override))));
+            try (var in = LexiconPhonemizer.class.getResourceAsStream(RESOURCE)) {
+                return in == null ? null : new LexiconPhonemizer(readTrie(in.readAllBytes()));
             }
+        } catch (IOException e) {
+            System.err.println("[inflect2] lexicon unusable (" + e.getMessage() + ")");
+            return null;
         }
-        try (var in = LexiconPhonemizer.class.getResourceAsStream("/lexicon.bin")) {
-            if (in != null) {
-                var dict = readTrie(in.readAllBytes());
-                if (!dict.isEmpty()) return new LexiconPhonemizer(dict);
-            }
-        } catch (Exception ignored) {
-        }
-        return null;
     }
 
+    /**
+     * Look each word up and join with the separator symbol. The text is expected to be normalized
+     * already (see {@link Phonemizer}); a word that is not in the lexicon is dropped, since there
+     * is no letter-to-sound model behind this one.
+     */
     @Override
     public int[] phonemize(String text) {
-        String norm = TextNormalizer.normalize(text);
-        var syms = new ArrayList<Integer>();
-        for (String word : norm.split("\\s+")) {
+        int[] symbols = new int[64];
+        int length = 0;
+        for (String word : text.split("\\s+")) {
             if (word.isEmpty()) continue;
-            int[] ids = lookupWord(word.toLowerCase());
-            if (ids != null && ids.length > 0) {
-                for (int id : ids) syms.add(id);
-                syms.add(SPACE);
-            }
+            int[] ids = lookup(word.toLowerCase());
+            if (ids == null || ids.length == 0) continue;
+            if (length + ids.length + 1 > symbols.length)
+                symbols = Arrays.copyOf(symbols, (length + ids.length + 1) * 2);
+            if (length > 0) symbols[length++] = SPACE;
+            System.arraycopy(ids, 0, symbols, length, ids.length);
+            length += ids.length;
         }
-        if (!syms.isEmpty() && syms.get(syms.size() - 1) == SPACE) syms.remove(syms.size() - 1);
-        return Symbols.blankIntersperse(syms.stream().mapToInt(Integer::intValue).toArray());
+        return Symbols.blankIntersperse(Arrays.copyOf(symbols, length));
     }
 
-    private int[] lookupWord(String lower) {
-        int[] ids = dict.get(lower);
-        if (ids != null) return ids;
-        for (int m = 0; m < MORPH; m++) {
-            String end = MORPH_END[m], stemFix = MORPH_STEM[m], sfxWord = MORPH_SFX[m];
-            if (lower.endsWith(end) && lower.length() > end.length() + 1) {
-                String stem = lower.substring(0, lower.length() - end.length());
-                if (!stemFix.isEmpty()) stem += stemFix;
-                int[] stemIds = dict.get(stem);
-                int[] sfxIds = sfxWord.isEmpty() ? null : dict.get(sfxWord);
-                if (stemIds != null && sfxIds != null) {
-                    int[] r = new int[stemIds.length + sfxIds.length];
-                    System.arraycopy(stemIds, 0, r, 0, stemIds.length);
-                    System.arraycopy(sfxIds, 0, r, stemIds.length, sfxIds.length);
-                    return r;
-                }
-            }
+    /** Exact match, else a known suffix split off a stem that is in the lexicon. */
+    private int[] lookup(String word) {
+        int[] exact = lexicon.get(word);
+        if (exact != null) return exact;
+        for (Suffix suffix : SUFFIXES) {
+            if (!word.endsWith(suffix.ending()) || word.length() <= suffix.ending().length() + 1)
+                continue;
+            String stem =
+                    word.substring(0, word.length() - suffix.ending().length()) + suffix.stemTail();
+            int[] stemIds = lexicon.get(stem);
+            int[] suffixIds = lexicon.get(suffix.spoken());
+            if (stemIds == null || suffixIds == null) continue;
+            int[] joined = Arrays.copyOf(stemIds, stemIds.length + suffixIds.length);
+            System.arraycopy(suffixIds, 0, joined, stemIds.length, suffixIds.length);
+            return joined;
         }
         return null;
     }
 
-    private static final String[] MORPH_END = {"ies", "'s", "s'", "es", "s", "ied", "ed", "ing"};
-    private static final String[] MORPH_STEM = {"y", "", "", "", "", "y", "", ""};
-    private static final String[] MORPH_SFX = {"z", "z", "z", "z", "z", "d", "d", "ng"};
-    private static final int MORPH = MORPH_END.length;
+    /** An inflection: strip {@code ending}, restore {@code stemTail}, then say {@code spoken}. */
+    private record Suffix(String ending, String stemTail, String spoken) {}
 
-    // ── trie reader ──────────────────────────────────────────────────────
+    private static final Suffix[] SUFFIXES = {
+        new Suffix("ies", "y", "z"),
+        new Suffix("'s", "", "z"),
+        new Suffix("s'", "", "z"),
+        new Suffix("es", "", "z"),
+        new Suffix("s", "", "z"),
+        new Suffix("ied", "y", "d"),
+        new Suffix("ed", "", "d"),
+        new Suffix("ing", "", "ng"),
+    };
 
-    private static Map<String, int[]> readTrie(byte[] data) {
-        var buf = java.nio.ByteBuffer.wrap(data).order(java.nio.ByteOrder.LITTLE_ENDIAN);
-        byte[] magic = new byte[4];
-        buf.get(magic);
-        if (!"IVL2".equals(new String(magic)) || buf.getShort() != 1) return Map.of();
-        buf.position(buf.position() + 2 + 32);
-        long count = Integer.toUnsignedLong(buf.getInt());
-        buf.position(buf.position() + 8);
-        long off = buf.getLong();
-        buf.position(buf.position() + 8);
+    // ── IVL2 lexicon format ───────────────────────────────────────────────
 
-        var dict = new HashMap<String, int[]>((int) (count * 4 / 3));
-        buf.position((int) off);
-        byte[] cur = new byte[64];
-        int len = 0;
-        for (long i = 0; i < count && buf.hasRemaining(); i++) {
-            int pf = Byte.toUnsignedInt(buf.get());
-            int sf = Byte.toUnsignedInt(buf.get());
-            if (pf > len) break;
-            len = pf + sf;
-            if (len > cur.length) cur = Arrays.copyOf(cur, len * 2);
-            if (sf > 0) buf.get(cur, pf, sf);
-            int tc = Byte.toUnsignedInt(buf.get());
-            if (tc > 0) {
-                int[] tok = new int[tc];
-                for (int t = 0; t < tc; t++) tok[t] = Byte.toUnsignedInt(buf.get());
-                dict.put(new String(cur, 0, len), tok);
-            }
+    private static final String MAGIC = "IVL2";
+    private static final int VERSION = 1;
+    private static final int HEADER_PAD = 2 + 32; // flags + reserved, after magic and version
+    private static final int MAX_WORD = 64;
+
+    /**
+     * Words are delta-coded against their predecessor: shared-prefix length, the bytes that differ,
+     * then the word's symbol ids. Sorted order is what makes the prefix reuse work.
+     */
+    private static Map<String, int[]> readTrie(byte[] data) throws IOException {
+        ByteBuffer buffer = ByteBuffer.wrap(data).order(ByteOrder.LITTLE_ENDIAN);
+        byte[] magic = new byte[MAGIC.length()];
+        buffer.get(magic);
+        if (!MAGIC.equals(new String(magic, StandardCharsets.US_ASCII)))
+            throw new IOException("not a lexicon: bad magic");
+        int version = buffer.getShort();
+        if (version != VERSION) throw new IOException("unsupported lexicon version " + version);
+        buffer.position(buffer.position() + HEADER_PAD);
+        int count = buffer.getInt();
+        buffer.position(buffer.position() + 8);
+        int entriesAt = (int) buffer.getLong();
+
+        Map<String, int[]> lexicon = HashMap.newHashMap(count);
+        buffer.position(entriesAt);
+        byte[] word = new byte[MAX_WORD];
+        int length = 0;
+        for (int entry = 0; entry < count && buffer.hasRemaining(); entry++) {
+            int shared = Byte.toUnsignedInt(buffer.get());
+            int fresh = Byte.toUnsignedInt(buffer.get());
+            if (shared > length) throw new IOException("lexicon entry " + entry + " out of order");
+            length = shared + fresh;
+            if (length > word.length) word = Arrays.copyOf(word, length * 2);
+            buffer.get(word, shared, fresh);
+            int symbols = Byte.toUnsignedInt(buffer.get());
+            if (symbols == 0) continue;
+            int[] ids = new int[symbols];
+            for (int i = 0; i < symbols; i++) ids[i] = Byte.toUnsignedInt(buffer.get());
+            lexicon.put(new String(word, 0, length, StandardCharsets.US_ASCII), ids);
         }
-        return dict;
+        return lexicon;
     }
 }
